--- a/docker-compose/harness/environment/manager.env
+++ b/docker-compose/harness/environment/manager.env
@@ -5,7 +5,7 @@ BACKGROUND_SCHEDULER_CLUSTERED=true
 BLOCKING_CAPABILITY_PERMISSIONS_RECORD_ITERATOR_THREAD_COUNT=2
 CACHE_BACKEND=REDIS
 CAPSULE_JAR=rest-capsule.jar
-CRONS_THREAD_COUNT=2
+CRONS_THREAD_COUNT=1
 DELEGATE_CAPABILITIES_RECORD_ITERATOR_THREAD_COUNT=2
 DELEGATE_DOCKER_IMAGE=harness/delegate:latest
 DELEGATE_GRPC_AUTHORITY=default-authority.harness.io
@@ -33,13 +33,13 @@ LICENSE_INFO=trialLicense
 LOGGERS=org.reflections.Reflections=ERROR
 LOGGING_LEVEL=WARN
 LOG_STREAMING_SERVICE_TOKEN=c76e567a-b341-404d-a8dd-d9738714eb82
-MEMORY=256
+MEMORY=240
 MONGO_URI=mongodb://mongo:27017/harness
 NG_MANAGER_BASE_URL=http://proxy/ng/api/
 ORCHESTRATION_NOTIFY_EVENT_LISTENER_COUNT=1
 PERPETUAL_TASK_ASSIGNMENT_ITERATOR_THREAD_COUNT=2
 PERPETUAL_TASK_REBALANCE_ITERATOR_THREAD_COUNT=2
-REDIS_NETTY_THREADS=2
+REDIS_NETTY_THREADS=1
 REDIS_URL=redis://redis:6379
 RESOURCE_CONSTRAINT_BACKUP_ITERATOR_THREAD_COUNT=2
 SERVER_PORT=9090
@@ -50,3 +50,8 @@ VAULT_SECRET_MANAGER_ITERATOR_THREAD_COUNT=2
 VERSION=1.0.72106
 WATCHER_METADATA_URL=http://proxy/storage/wingswatchers/watcherprod.txt
 WORKFLOW_EXECUTION_MONITOR_ITERATOR_THREAD_COUNT=2
+COMMON_POOL_CORE_SIZE=1
+COMMON_POOL_MAX_SIZE=2
+GRAPHQL_ENABLED=false
+SEARCH_ENABLED=false
+SERVER_MAX_THREADS=12
