--- a/docker-compose/harness/environment/platform-service.env
+++ b/docker-compose/harness/environment/platform-service.env
@@ -15,7 +15,7 @@ JAVA_ADVANCED_FLAGS=-XX:-TieredCompilation
 LOCK_CONFIG_REDIS_URL=redis://redis:6379
 LOGGING_LEVEL=WARN
 MANAGER_CLIENT_BASEURL=http://proxy/api/
-MEMORY=80m
+MEMORY=72m
 MOCK_ACCESS_CONTROL_SERVICE=true
 MONGO_URI=mongodb://mongo:27017/notifications
 NG_MANAGER_CLIENT_BASEURL=http://proxy/ng/api/
@@ -25,6 +25,8 @@ REDIS_NETTY_THREADS=1
 RESOURCE_GROUP_CLIENT_BASE_URL=http://proxy/resourcegroup/api/
 RESOURCE_GROUP_MONGO_URI=mongodb://mongo:27017/resource-groups
 SERVER_MAX_THREADS=12
+COMMON_POOL_CORE_SIZE=1
+COMMON_POOL_MAX_SIZE=1
 SMTP_HOST=
 SMTP_PASSWORD=
 SMTP_PORT=465
