--- a/docker-compose/harness/environment/ng-manager.env
+++ b/docker-compose/harness/environment/ng-manager.env
@@ -6,7 +6,7 @@ DEPLOY_VERSION=COMMUNITY
 DISTRIBUTED_LOCK_IMPLEMENTATION=REDIS
 ENABLE_DEFAULT_RESOURCE_GROUP_CREATION=true
 ENABLE_SERIALGC=true
-EVENTS_FRAMEWORK_NETTY_THREADS=2
+EVENTS_FRAMEWORK_NETTY_THREADS=1
 EVENTS_FRAMEWORK_REDIS_URL=redis://redis:6379
 GIT_FULLSYNC_ENTITY_ITERATOR_THREAD_POOL_SIZE=2
 GRPC_SERVER_PORT=9979
@@ -33,9 +33,16 @@ NOTIFICATION_MONGO_URI=mongodb://mongo:27017/notifications
 PMS_AUTHORITY=default-authority.harness.io
 PMS_MONGO_URI=mongodb://mongo:27017/pms-harness
 PMS_TARGET=pipeline-service:12011
-REDIS_NETTY_THREADS=2
+REDIS_NETTY_THREADS=1
 RESOURCE_GROUP_BASE_URL=http://proxy/resourcegroup/api/
 SCM_SERVICE_URI=scm:8091
 SHOULD_CONFIGURE_WITH_PMS=true
 USE_REDIS_FOR_SDK_RESPONSE_EVENTS=true
 WEBHOOK_EVENT_PROCESSING_SERVICE_THREAD_SIZE=2
+COMMON_POOL_CORE_SIZE=1
+COMMON_POOL_MAX_SIZE=2
+PMS_SDK_EXECUTION_POOL_CORE_SIZE=1
+PMS_SDK_EXECUTION_POOL_MAX_SIZE=2
+PMS_SDK_ORCHESTRATION_EVENT_POOL_CORE_SIZE=1
+PMS_SDK_ORCHESTRATION_EVENT_POOL_MAX_SIZE=2
+SERVER_MAX_THREADS=16
