[GTM-572]: segment config override

--- a/docker-compose/harness/environment/manager.env
+++ b/docker-compose/harness/environment/manager.env
@@ -55,3 +55,5 @@ COMMON_POOL_MAX_SIZE=2
 GRAPHQL_ENABLED=false
 SEARCH_ENABLED=false
 SERVER_MAX_THREADS=12
+SEGMENT_NG_URL=https://stats.drone.ci/api/v1/
+SEGMENT_NG_ENABLED=true
