--- a/docker-compose/harness/environment/ng-manager.env
+++ b/docker-compose/harness/environment/ng-manager.env
@@ -46,3 +46,5 @@ PMS_SDK_EXECUTION_POOL_MAX_SIZE=2
 PMS_SDK_ORCHESTRATION_EVENT_POOL_CORE_SIZE=1
 PMS_SDK_ORCHESTRATION_EVENT_POOL_MAX_SIZE=2
 SERVER_MAX_THREADS=16
+SEGMENT_URL=https://stats.drone.ci/api/v1/
+SEGMENT_ENABLED=true
