--- a/docker-compose/harness/environment/pipeline-service.env
+++ b/docker-compose/harness/environment/pipeline-service.env
@@ -55,3 +55,5 @@ USE_REDIS_FOR_INTERRUPTS=true
 USE_REDIS_FOR_ORCHESTRATION_EVENTS=true
 USE_REDIS_FOR_SDK_RESPONSE_EVENTS=true
 WEBHOOK_ITERATOR_THREAD_POOL_SIZE=2
+SEGMENT_URL=https://stats.drone.ci/api/v1/
+SEGMENT_ENABLED=true
