--- a/helm/harness/templates/pipeline-service.yaml
+++ b/helm/harness/templates/pipeline-service.yaml
@@ -58,6 +58,8 @@ data:
   USE_REDIS_FOR_ORCHESTRATION_EVENTS: 'true'
   USE_REDIS_FOR_SDK_RESPONSE_EVENTS: 'true'
   WEBHOOK_ITERATOR_THREAD_POOL_SIZE: '2'
+  SEGMENT_URL: https://stats.drone.ci/api/v1/
+  SEGMENT_ENABLED: 'true'
 
 ---
 
