Reduce Startup Cost

--- a/docker-compose/harness/environment/platform-service.env
+++ b/docker-compose/harness/environment/platform-service.env
@@ -11,7 +11,7 @@ EVENTS_FRAMEWORK_NETTY_THREADS=1
 EVENTS_FRAMEWORK_REDIS_URL=redis://redis:6379
 GRPC_MANAGER_AUTHORITY=default-authority.harness.io
 GRPC_MANAGER_TARGET=manager:9879
-JAVA_ADVANCED_FLAGS=-agentpath:/opt/harness/jprofiler12/bin/linux-x64/libjprofilerti.so=port=8849 -XX:-TieredCompilation
+JAVA_ADVANCED_FLAGS=-XX:-TieredCompilation
 LOCK_CONFIG_REDIS_URL=redis://redis:6379
 LOGGING_LEVEL=WARN
 MANAGER_CLIENT_BASEURL=http://proxy/api/
@@ -32,3 +32,4 @@ SMTP_PASSWORD=
 SMTP_PORT=465
 SMTP_USERNAME=
 SMTP_USE_SSL=true
+DISABLE_RESOURCE_VALIDATION=true
