--- a/docker-compose/harness/docker-compose.yml
+++ b/docker-compose/harness/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.7'
-
 services:
 
   ng-ui:
@@ -7,7 +5,7 @@ services:
     deploy:
       resources:
         limits:
-          cpus: '0.0125'
+          # cpus: '0.0125'
           memory: 32m
     environment:
       - API_URL=http://${PUBLIC_IP:?err}
@@ -24,7 +22,7 @@ services:
     deploy:
       resources:
         limits:
-          cpus: '0.0125'
+          # cpus: '0.0125'
           memory: 32m
     environment:
       - DEPLOYMENT_TYPE=COMMUNITY
@@ -37,11 +35,11 @@ services:
       harness-network:
 
   manager:
-    image: harness/manager-signed:72902
+    image: harness/manager-signed:7300004
     deploy:
       resources:
         limits:
-          cpus: 0.45
+          # cpus: 0.45
           memory: 800m
     depends_on:
       - mongo
@@ -57,73 +55,84 @@ services:
       - '9879'
     healthcheck:
       test: "wget -q -O - http://localhost:9090/api/health"
-      start_period: 5m
+      start_period: 1m
     # ports:
     #   - '8849:8849'
-    volumes:
-      - ./jmx_prometheus_javaagent:/opt/harness/jmx_prometheus_javaagent
-      # - /Users/ankitsinghal/jprofiler12:/opt/harness/jprofiler12
+    # volumes:
+    #   - ./jmx_prometheus_javaagent:/opt/harness/jmx_prometheus_javaagent
+    #   - ~/jprofiler12:/opt/harness/jprofiler12
     networks:
       harness-network:
 
   ng-manager:
-    image: harness/ng-manager-signed:72902
+    image: harness/ng-manager-signed:7300004
     deploy:
       resources:
         limits:
-          cpus: 0.4
+          # cpus: 0.4
           memory: 800m
     depends_on:
-      - mongo
-      - pipeline-service
-      - redis
+      platform-service:
+        condition: service_healthy
+      pipeline-service:
+        condition: service_healthy
+      mongo:
+        condition: service_started
+      redis:
+        condition: service_started
     env_file: environment/ng-manager.env
     expose:
       - '7090'
     healthcheck:
       test: "wget -q -O - http://localhost:7090/health"
-      start_period: 5m
-    # ports:
-    #   - '8849:8849'
-    volumes:
-      - ./jmx_prometheus_javaagent:/opt/harness/jmx_prometheus_javaagent
-      # - /Users/ankitsinghal/jprofiler12:/opt/harness/jprofiler12
+      start_period: 1m
+    ports:
+      - '8849:8849'
+      - '8001:8001'
+    # volumes:
+    #   - ./jmx_prometheus_javaagent:/opt/harness/jmx_prometheus_javaagent
+    #   - ~/jprofiler12:/opt/harness/jprofiler12
     networks:
       harness-network:
 
   pipeline-service:
-    image: harness/pipeline-service-signed:72902
+    image: harness/pipeline-service-signed:7300004
     deploy:
       resources:
         limits:
-          cpus: 0.45
+          # cpus: 0.4
           memory: 684m
     depends_on:
-      - platform-service
-      - log-service
-      - mongo
-      - redis
+      platform-service:
+        condition: service_healthy
+      log-service:
+        condition: service_started
+      mongo:
+        condition: service_started
+      redis:
+        condition: service_started
     env_file: environment/pipeline-service.env
     expose:
       - '12001'
       - '12011'
     healthcheck:
       test: "wget -q -O - http://localhost:12001/api/health"
-      start_period: 5m
+      interval: 5s
+      start_period: 1m
     # ports:
     #   - '8849:8849'
     networks:
       harness-network:
-    volumes:
-      - ./jmx_prometheus_javaagent:/opt/harness/jmx_prometheus_javaagent
-      # - /Users/ankitsinghal/jprofiler12:/opt/harness/jprofiler12
+    # volumes:
+    #   - ./jmx_prometheus_javaagent:/opt/harness/jmx_prometheus_javaagent
+    #   - ~/jprofiler12:/opt/harness/jprofiler12
 
   platform-service:
-    image: harness/platform-service-signed:72902
+    image: harness/platform-service-signed:7300004
     deploy:
       resources:
         limits:
-          cpus: 0.15
+          # cpus: 0.15
           memory: 256m
     depends_on:
       - mongo
@@ -133,22 +142,23 @@ services:
       - '9005'
     healthcheck:
       test: "wget -q -O - http://localhost:9005/api/health"
-      start_period: 5m
+      start_period: 1m
+      interval: 5s
     networks:
       harness-network:
-    ports:
-      - '8849:8849'
-      - '8001:8001'
-    volumes:
-      - ./jmx_prometheus_javaagent:/opt/harness/jmx_prometheus_javaagent
-      - ~/jprofiler12:/opt/harness/jprofiler12
+    # ports:
+    #   - '8849:8849'
+    #   - '8001:8001'
+    # volumes:
+    #   - ./jmx_prometheus_javaagent:/opt/harness/jmx_prometheus_javaagent
+    #   - ~/jprofiler12:/opt/harness/jprofiler12
 
   log-service:
     image: harness/log-service-signed:release-15
     deploy:
       resources:
         limits:
-          cpus: '0.0125'
+          # cpus: '0.0125'
           memory: 32m
     depends_on:
       - mongo
@@ -167,7 +177,7 @@ services:
     deploy:
       resources:
         limits:
-          cpus: '0.0125'
+          # cpus: '0.0125'
           memory: 32m
     expose:
       - '8091'
@@ -181,7 +191,7 @@ services:
     deploy:
       resources:
         limits:
-          cpus: '0.0125'
+          # cpus: '0.0125'
           memory: 32m
     expose:
       - '8080'
@@ -195,7 +205,7 @@ services:
     deploy:
       resources:
         limits:
-          cpus: '0.0125'
+          # cpus: '0.0125'
           memory: 16m
     expose:
       - '80'
@@ -222,7 +232,7 @@ services:
     deploy:
       resources:
         limits:
-          cpus: '0.025'
+          # cpus: '0.025'
           memory: 96m
     expose:
       - '6379'
@@ -236,7 +246,7 @@ services:
     deploy:
       resources:
         limits:
-          cpus: 0.45
+          # cpus: 0.5
           memory: 256m
     command: --wiredTigerCacheSizeGB 0.125 -f /etc/mongod.conf
     healthcheck:
