--- a/docker-compose/harness/environment/ng-manager.env
+++ b/docker-compose/harness/environment/ng-manager.env
@@ -46,3 +46,4 @@ PMS_SDK_EXECUTION_POOL_MAX_SIZE=2
 PMS_SDK_ORCHESTRATION_EVENT_POOL_CORE_SIZE=1
 PMS_SDK_ORCHESTRATION_EVENT_POOL_MAX_SIZE=2
 SERVER_MAX_THREADS=16
+DISABLE_RESOURCE_VALIDATION=true
