PL-21043 redirect logout path to ng-auth-ui

--- a/docker-compose/harness/config/nginx/nginx.conf
+++ b/docker-compose/harness/config/nginx/nginx.conf
@@ -68,6 +68,16 @@ http {
             proxy_pass http://ng_auth_ui_service/;
         }
 
+        location /auth/ {
+            # WebSocket support (nginx 1.4)
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection "upgrade";
+            client_max_body_size 2G;
+
+            proxy_pass http://ng_auth_ui_service/;
+        }
+
         location /storage/ {
             # WebSocket support (nginx 1.4)
             proxy_http_version 1.1;
