--- a/docker-compose/harness/environment/manager.env
+++ b/docker-compose/harness/environment/manager.env
@@ -7,7 +7,7 @@ CACHE_BACKEND=REDIS
 CAPSULE_JAR=rest-capsule.jar
 CRONS_THREAD_COUNT=1
 DELEGATE_CAPABILITIES_RECORD_ITERATOR_THREAD_COUNT=2
-DELEGATE_DOCKER_IMAGE=harness/delegate:latest
+DELEGATE_DOCKER_IMAGE=harness/delegate:ubi-beta
 DELEGATE_GRPC_AUTHORITY=default-authority.harness.io
 DELEGATE_METADATA_URL=http://proxy/storage/wingsdelegates/delegateprod.txt
 DELEGATE_SERVICE_AUTHORITY=default-authority.harness.io
