Sync Helm and DC config

--- a/helm/harness/templates/ng-manager.yaml
+++ b/helm/harness/templates/ng-manager.yaml
@@ -3,21 +3,24 @@ kind: ConfigMap
 metadata:
   name: ng-manager
 data:
+  AUDIT_ENABLED: 'false'
   CACHE_BACKEND: REDIS
+  COMMON_POOL_CORE_SIZE: '1'
+  COMMON_POOL_MAX_SIZE: '5'
   CURRENT_GEN_UI_URL: http://proxy/#/
   DEPLOY_MODE: KUBERNETES_ONPREM
   DEPLOY_VERSION: COMMUNITY
   DISTRIBUTED_LOCK_IMPLEMENTATION: REDIS
   ENABLE_DEFAULT_RESOURCE_GROUP_CREATION: 'true'
   ENABLE_SERIALGC: 'true'
-  EVENTS_FRAMEWORK_NETTY_THREADS: '2'
+  EVENTS_FRAMEWORK_NETTY_THREADS: '1'
   EVENTS_FRAMEWORK_REDIS_URL: redis://redis:6379
   GIT_FULLSYNC_ENTITY_ITERATOR_THREAD_POOL_SIZE: '2'
   GRPC_SERVER_PORT: '9979'
   JAVA_ADVANCED_FLAGS: -XX:-TieredCompilation
   LICENSE_DEPLOY_VARIANT: COMMUNITY
   LOCK_CONFIG_REDIS_URL: redis://redis:6379
-  LOGGING_LEVEL: TRACE
+  LOGGING_LEVEL: WARN
   LOG_STREAMING_SERVICE_BASEURL: http://proxy/log-service/
   LOG_STREAMING_SERVICE_TOKEN: c76e567a-b341-404d-a8dd-d9738714eb82
   MANAGER_AUTHORITY: default-authority.harness.io
@@ -33,15 +36,20 @@ data:
   NG_MANAGER_UI_URL: http://proxy/ng/#/
   NG_VAULT_ITERATOR_THREAD_POOL_SIZE: '2'
   PMS_AUTHORITY: default-authority.harness.io
+  PMS_SDK_EXECUTION_POOL_CORE_SIZE: '1'
+  PMS_SDK_EXECUTION_POOL_MAX_SIZE: '2'
+  PMS_SDK_ORCHESTRATION_EVENT_POOL_CORE_SIZE: '1'
+  PMS_SDK_ORCHESTRATION_EVENT_POOL_MAX_SIZE: '2'
   PMS_TARGET: pipeline-service:12011
-  REDIS_NETTY_THREADS: '2'
+  REDIS_NETTY_THREADS: '1'
   RESOURCE_GROUP_BASE_URL: http://proxy/resourcegroup/api/
   SCM_SERVICE_URI: scm:8091
+  SEGMENT_ENABLED: 'true'
+  SEGMENT_URL: https://stats.drone.ci/api/v1/
+  SERVER_MAX_THREADS: '16'
   SHOULD_CONFIGURE_WITH_PMS: 'true'
   USE_REDIS_FOR_SDK_RESPONSE_EVENTS: 'true'
   WEBHOOK_EVENT_PROCESSING_SERVICE_THREAD_SIZE: '2'
-  SEGMENT_URL: https://stats.drone.ci/api/v1/
-  SEGMENT_ENABLED: 'true'
 
 ---
 
