--- a/helm/harness/templates/platform-service.yaml
+++ b/helm/harness/templates/platform-service.yaml
@@ -5,6 +5,8 @@ metadata:
 data:
   AUDIT_CLIENT_BASEURL: http://proxy/audit/api/
   AUDIT_ENABLED: 'false'
+  COMMON_POOL_CORE_SIZE: '1'
+  COMMON_POOL_MAX_SIZE: '2'
   DEPLOY_MODE: KUBERNETES_ONPREM
   DEPLOY_VERSION: COMMUNITY
   DISTRIBUTED_LOCK_IMPLEMENTATION: REDIS
