--- a/helm/harness/templates/manager.yaml
+++ b/helm/harness/templates/manager.yaml
@@ -33,7 +33,9 @@ data:
   BLOCKING_CAPABILITY_PERMISSIONS_RECORD_ITERATOR_THREAD_COUNT: '2'
   CACHE_BACKEND: REDIS
   CAPSULE_JAR: rest-capsule.jar
-  CRONS_THREAD_COUNT: '2'
+  COMMON_POOL_CORE_SIZE: '1'
+  COMMON_POOL_MAX_SIZE: '10'
+  CRONS_THREAD_COUNT: '1'
   DELEGATE_CAPABILITIES_RECORD_ITERATOR_THREAD_COUNT: '2'
   DELEGATE_DOCKER_IMAGE: harness/delegate:ubi-beta
   DELEGATE_GRPC_AUTHORITY: default-authority.harness.io
@@ -56,6 +58,7 @@ data:
   EXECUTION_EVENT_LISTENER_COUNT: '1'
   FEATURES: RBAC,LDAP_SSO_PROVIDER,SHELL_SCRIPT_PROVISION,CUSTOM_DASHBOARD,GRAPHQL,SEND_SLACK_NOTIFICATION_FROM_DELEGATE,CONNECTORS_REF_SECRETS_MIGRATION,CDNG_ENABLED,NEXT_GEN_ENABLED,LOG_STREAMING_INTEGRATION,NG_CG_TASK_ASSIGNMENT_ISOLATION
   GENERAL_NOTIFY_EVENT_LISTENER_COUNT: '1'
+  GRAPHQL_ENABLED: 'false'
   INSTANCE_SYNC_ITERATOR_THREAD_COUNT: '2'
   JAVA_ADVANCED_FLAGS: -XX:-TieredCompilation
   LICENSE_INFO: trialLicense
@@ -68,9 +71,13 @@ data:
   ORCHESTRATION_NOTIFY_EVENT_LISTENER_COUNT: '1'
   PERPETUAL_TASK_ASSIGNMENT_ITERATOR_THREAD_COUNT: '2'
   PERPETUAL_TASK_REBALANCE_ITERATOR_THREAD_COUNT: '2'
-  REDIS_NETTY_THREADS: '2'
+  REDIS_NETTY_THREADS: '1'
   REDIS_URL: redis://redis:6379
   RESOURCE_CONSTRAINT_BACKUP_ITERATOR_THREAD_COUNT: '2'
+  SEARCH_ENABLED: 'false'
+  SEGMENT_NG_ENABLED: 'true'
+  SEGMENT_NG_URL: https://stats.drone.ci/api/v1/
+  SERVER_MAX_THREADS: '12'
   SERVER_PORT: '9090'
   SERVICE_ACC: /opt/harness/svc/service_acc.json
   SETTING_ATTRIBUTE_VALIDATE_CONNECTIVITY_ITERATOR_THREAD_COUNT: '2'
@@ -79,8 +86,6 @@ data:
   VERSION: 1.0.{{ .Values.versions.manager }}
   WATCHER_METADATA_URL: http://proxy/storage/wingswatchers/watcherprod.txt
   WORKFLOW_EXECUTION_MONITOR_ITERATOR_THREAD_COUNT: '2'
-  SEGMENT_NG_URL: https://stats.drone.ci/api/v1/
-  SEGMENT_NG_ENABLED: 'true'
 ---
 
 apiVersion: v1
