--- a/docker-compose/harness/environment/pipeline-service.env
+++ b/docker-compose/harness/environment/pipeline-service.env
@@ -9,7 +9,8 @@ CI_MANAGER_TARGET=ci-manager:9979
 CREATE_PLAN_EVENT_CONSUMER_THREAD_COUNT=1
 DEPLOY_MODE=KUBERNETES_ONPREM
 DEPLOY_VERSION=COMMUNITY
-DISTRIBUTED_LOCK_IMPLEMENTATION=MONGO
+DISTRIBUTED_LOCK_IMPLEMENTATION=REDIS
+LOCK_CONFIG_REDIS_URL=redis://redis:6379
 ENABLE_AUDIT=false
 ENABLE_SERIALGC=true
 EVENTS_FRAMEWORK_NETTY_THREADS=2
