Enable Native Memory Tracking

--- a/docker-compose/harness/environment/manager.env
+++ b/docker-compose/harness/environment/manager.env
@@ -32,7 +32,7 @@ FEATURES=RBAC,LDAP_SSO_PROVIDER,SHELL_SCRIPT_PROVISION,CUSTOM_DASHBOARD,GRAPHQL,
 GENERAL_NOTIFY_EVENT_LISTENER_COUNT=1
 GRAPHQL_ENABLED=false
 INSTANCE_SYNC_ITERATOR_THREAD_COUNT=2
-JAVA_ADVANCED_FLAGS=-XX:-TieredCompilation
+JAVA_ADVANCED_FLAGS=-XX:NativeMemoryTracking=summary -XX:-TieredCompilation
 LICENSE_INFO=trialLicense
 LOGGERS=org.reflections.Reflections=ERROR
 LOGGING_LEVEL=WARN
