--- a/docker-compose/harness/environment/ng-manager.env
+++ b/docker-compose/harness/environment/ng-manager.env
@@ -13,7 +13,7 @@ EVENTS_FRAMEWORK_NETTY_THREADS=1
 EVENTS_FRAMEWORK_REDIS_URL=redis://redis:6379
 GIT_FULLSYNC_ENTITY_ITERATOR_THREAD_POOL_SIZE=2
 GRPC_SERVER_PORT=9979
-JAVA_ADVANCED_FLAGS=-XX:-TieredCompilation
+JAVA_ADVANCED_FLAGS=-XX:NativeMemoryTracking=summary -XX:-TieredCompilation
 LICENSE_DEPLOY_VARIANT=COMMUNITY
 LOCK_CONFIG_REDIS_URL=redis://redis:6379
 LOGGING_LEVEL=WARN
