--- a/docker-compose/harness/environment/pipeline-service.env
+++ b/docker-compose/harness/environment/pipeline-service.env
@@ -6,6 +6,8 @@ CACHE_CONFIG_REDIS_URL=redis://redis:6379
 CI_MANAGER_AUTHORITY=default-authority.harness.io
 CI_MANAGER_BASE_URL=http://proxy/ci/
 CI_MANAGER_TARGET=ci-manager:9979
+COMMON_POOL_CORE_SIZE=1
+COMMON_POOL_MAX_SIZE=5
 CREATE_PLAN_EVENT_CONSUMER_THREAD_COUNT=1
 DEPLOY_MODE=KUBERNETES_ONPREM
 DEPLOY_VERSION=COMMUNITY
@@ -45,6 +47,10 @@ PIPELINE_SERVICE_BASE_URL=http://proxy/ng/#
 PLAN_NOTIFY_EVENT_CONSUMER_THREAD_COUNT=1
 PMS_API_BASE_URL=http://proxy/pipeline/api/
 PMS_NOTIFY_EVENT_CONSUMER_THREAD_COUNT=1
+PMS_SDK_EXECUTION_POOL_CORE_SIZE=1
+PMS_SDK_EXECUTION_POOL_MAX_SIZE=2
+PMS_SDK_ORCHESTRATION_EVENT_POOL_CORE_SIZE=1
+PMS_SDK_ORCHESTRATION_EVENT_POOL_MAX_SIZE=2
 PROGRESS_EVENT_CONSUMER_THREAD_COUNT=1
 REDIS_NETTY_THREADS=1
 RESOURCE_RESTRAINT_ITERATOR_THREAD_POOL_SIZE=2
@@ -54,6 +60,7 @@ SCM_SERVICE_URI=scm:8091
 SDK_RESPONSE_EVENT_CONSUMER_THREAD_COUNT=1
 SEGMENT_ENABLED=true
 SEGMENT_URL=https://stats.drone.ci/api/v1/
+SERVER_MAX_THREADS=12
 TIMEOUT_ENGINE_ITERATOR_THREAD_POOL_SIZE=2
 USE_REDIS_FOR_INTERRUPTS=true
 USE_REDIS_FOR_ORCHESTRATION_EVENTS=true
