Remove Native Memory Tracking

--- a/docker-compose/harness/environment/pipeline-service.env
+++ b/docker-compose/harness/environment/pipeline-service.env
@@ -23,7 +23,7 @@ GRAPH_UPDATE_EVENT_CONSUMER_THREAD_COUNT=1
 GRPC_SERVER_PORT=12011
 INTERRUPT_CONSUMER_THREAD_COUNT=1
 INTERRUPT_MONITOR_ITERATOR_THREAD_POOL_SIZE=2
-JAVA_ADVANCED_FLAGS=-XX:NativeMemoryTracking=summary -XX:-TieredCompilation
+JAVA_ADVANCED_FLAGS=-XX:-TieredCompilation
 LOGGING_LEVEL=WARN
 LOG_STREAMING_SERVICE_BASEURL=http://proxy/log-service/
 MANAGER_AUTHORITY=default-authority.harness.io
