--- a/docker-compose/harness/environment/platform-service.env
+++ b/docker-compose/harness/environment/platform-service.env
@@ -14,7 +14,7 @@ EVENTS_FRAMEWORK_NETTY_THREADS=1
 EVENTS_FRAMEWORK_REDIS_URL=redis://redis:6379
 GRPC_MANAGER_AUTHORITY=default-authority.harness.io
 GRPC_MANAGER_TARGET=manager:9879
-JAVA_ADVANCED_FLAGS=-XX:NativeMemoryTracking=summary -XX:-TieredCompilation
+JAVA_ADVANCED_FLAGS=-XX:-TieredCompilation
 LOCK_CONFIG_REDIS_URL=redis://redis:6379
 LOGGING_LEVEL=WARN
 MANAGER_CLIENT_BASEURL=http://proxy/api/
