add config for pms gitsync

--- a/docker-compose/harness/environment/ng-manager.env
+++ b/docker-compose/harness/environment/ng-manager.env
@@ -34,6 +34,8 @@ NG_MANAGER_UI_URL=http://proxy/ng/#/
 NG_VAULT_ITERATOR_THREAD_POOL_SIZE=2
 NOTIFICATION_MONGO_URI=mongodb://mongo:27017/notifications
 PMS_AUTHORITY=default-authority.harness.io
+PMS_GITSYNC_AUTHORITY=default-authority.harness.io
+PMS_GITSYNC_TARGET=pipeline-service:14002
 PMS_MONGO_URI=mongodb://mongo:27017/pms-harness
 PMS_SDK_EXECUTION_POOL_CORE_SIZE=1
 PMS_SDK_EXECUTION_POOL_MAX_SIZE=2
